[package]
name = "x402-chain-solana"
version = "0.1.0"
edition = "2024"

[features]
default = []
telemetry = ["tracing", "tracing-core", "x402-types/telemetry"]
client = ["alloy-primitives", "spl-token", "spl-token-2022", "solana-transaction", "solana-signer", "solana-client", "solana-signature", "solana-account", "solana-message", "solana-compute-budget-interface", "bincode", "solana-commitment-config"]
server = []
facilitator = ["solana-client", "spl-token", "spl-token-2022", "solana-keypair", "solana-account", "solana-signer", "solana-transaction", "solana-signature", "solana-message", "solana-commitment-config", "solana-compute-budget-interface", "bs58", "bincode", "futures-util"]

[dependencies]
x402-types = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
alloy-primitives = { workspace = true, optional = true }
serde_json = { workspace = true }

# Solana - always needed
solana-pubkey = { version = "4.0.0" }

# Needed by faciliator and client features
solana-signature = { version = "3.1.0", optional = true }
solana-transaction = { version = "3.0.2", optional = true }
solana-signer = { version = "3.0.0", optional = true }
spl-token = { version = "9.0.0", features = ["no-entrypoint"], optional = true }
spl-token-2022 = { version = "10.0.0", features = ["no-entrypoint"], optional = true }

# Solana - client feature only
solana-client = { version = "3.1.4", optional = true }
solana-account = { version = "3.2.0", optional = true }
solana-message = { version = "3.0.1", optional = true }
solana-compute-budget-interface = { version = "3.0.0", optional = true }
solana-commitment-config = { version = "3.1.0", optional = true }
futures-util = { version = "0.3.31", optional = true }
bincode = { version = "1.3.3", optional = true }

# Solana - facilitator feature only
bs58 = { version = "0.5.1", optional = true }
solana-keypair = { version = "3.1.0", optional = true }

# Telemetry
tracing = { workspace = true, optional = true }
tracing-core = { workspace = true, optional = true }
